--- a/Employee-Asset/index.html
+++ b/Employee-Asset/index.html
@@ -675,7 +675,7 @@
                 };
 
                 try {
-                    const response = await fetch('http://localhost:3000/api/requests', {
+                    const response = await fetch('http://13.48.195.115:3031/api/requests', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
